--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,15 @@ a {
 	color: #1c80a8;
 	transition: color .35s ease;
 }
+
+p {
+	line-height: 1.5;
+}
+
+h1 + *, h2 + *, h3 + *, h4 + *, h5 + *, h6 + * {
+	margin-top: 0.5em;
+}
+
 a:hover {
 	color: #33ccff;
 }
